--- a/node-str/package.json
+++ b/node-str/package.json
@@ -13,7 +13,8 @@
     "body-parser": "^1.18.2",
     "debug": "^3.1.0",
     "express": "^4.16.2",
-    "http": "0.0.0"
+    "http": "0.0.0",
+    "mongoose": "^4.12.4"
   },
   "devDependencies": {
     "nodemon": "^1.12.1"
