--- a/node-str/package.json
+++ b/node-str/package.json
@@ -13,7 +13,9 @@
     "body-parser": "^1.18.2",
     "debug": "^3.1.0",
     "express": "^4.16.2",
+    "guid": "0.0.12",
     "http": "0.0.0",
+    "md5": "^2.2.1",
     "mongoose": "^4.12.4"
   },
   "devDependencies": {
