--- a/node-str/package.json
+++ b/node-str/package.json
@@ -10,13 +10,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "azure-storage": "^2.1.0",
     "body-parser": "^1.18.2",
     "debug": "^3.1.0",
     "express": "^4.16.2",
     "guid": "0.0.12",
     "http": "0.0.0",
     "md5": "^2.2.1",
-    "mongoose": "^4.12.4"
+    "mongoose": "^4.12.4",
+    "sendgrid": "^2.0.0"
   },
   "devDependencies": {
     "nodemon": "^1.12.1"
