--- a/node-str/package.json
+++ b/node-str/package.json
@@ -16,6 +16,7 @@
     "express": "^4.16.2",
     "guid": "0.0.12",
     "http": "0.0.0",
+    "jsonwebtoken": "^7.4.0",
     "md5": "^2.2.1",
     "mongoose": "^4.12.4",
     "sendgrid": "^2.0.0"
